<resources>
    <string name="app_name">My Application</string>
    <string name="時刻">時刻</string>
    <string name="平日繰り返し">平日繰り返し</string>
    <string name="戻る">戻る</string>
    <string name="登録">登録</string>
    <string name="時刻選択">時刻選択</string>
    <string name="description">pictures</string>
    <string name="アラーム追加">アラーム追加</string>
    <string name="time">time</string>
    <string name="onoff">onoff</string>
    <string name="repeat">repeat</string>
    <string name="customize">customize</string>
    <string name="show_dialog">show_dialog</string>
    <string name="undo">custumizetion</string>
    <string name="userName">ユーザー名</string>
    <string name="passwordBox1">パスワード</string>
    <string name="passwordBox2">パスワード（確認用）</string>
    <string name="userNameBox">ユーザー名</string>
    <string name="password1">パスワード</string>
    <string name="password2">パスワード（確認用）</string>
    <string name="inputButton">登録</string>
    <string name="address">住所</string>
    <string name="addressBox">住所</string>
    <string name="hint">半角英数字8文字以上で入力してください</string>
    <string name="email">メールアドレス</string>
    <string name="email_box">メールアドレス</string>
    <string name="kakeibosum">合計金額</string>
    <string name="color">色選択</string>
    <string name="予定">plans</string>
    <string name="plans">予定</string>
    <string name="memo">メモ</string>
    <string name="notification">通知</string>
    <string name="registBtn">登録</string>
    <string name="startText" />
    <string name="startDayText">開始時間</string>
    <string name="endDateText">終了時間</string>
    <string name="startTimeView" />
    <string name="startTimeText">開始時間</string>
    <string name="endTimeText">終了時間</string>
    <string name="startDayView">開始日</string>
    <string name="endDateView">終了日</string>
    <string name="red" />
    <string name="redBtn">red</string>
    <string name="kensaku">search</string>
    <string name="menu_item1">家計簿</string>
    <string name="menu_item2">アラーム</string>
    <string name="menu_item3">周辺マップ</string>
    <string name="menu_item4">アバター</string>
    <string name="menu_item5">カレンダー</string>
    <string name="menu_item6">アカウント情報</string>
    <string name="account_update">アカウント情報変更</string>
    <string name="password_update">パスワード変更</string>
    <string name="update">変更</string>
    <string name="before_password">変更前のパスワード</string>
    <string name="new_password">新しいパスワード</string>
    <string name="new_password2">新しいパスワード（確認用）</string>
    <string name="plansNew">予定(30文字以内)</string>
</resources>